fixed some spacing

--- a/www/style.css
+++ b/www/style.css
@@ -112,7 +112,7 @@ footer .loic {
 	footer {
 		margin-top: 4em;
 		position: absolute;
-		margin-top: 502px;
+		margin-top: 500px;
 		margin-left: 400px;
 		-webkit-transform: rotate(2deg);
 	}
